--- a/html/08.post-hooks.html
+++ b/html/08.post-hooks.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="../css/all.min.css">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/base.css">
-  <link rel="stylesheet" href="../css/07.post.css">
 </head>
 <body>
   <div id="app"></div>
@@ -17,6 +16,6 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <script src="../js/08.post-hook.js" type="text/babel"></script>
+  <script src="../js/08.post-hooks.js" type="text/babel"></script>
 </body>
 </html>
